local storage catching in now Working Well.

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
         </h1>
         <ul>
             <li>
-                <span>3</span>Days
+                <span></span>Days
             </li>
             <li>
-                <span>6</span>Hours
+                <span></span>Hours
             </li>
             <li>
-                <span>45</span>Minutes
+                <span></span>Minutes
             </li>
             <li>
-                <span>3</span>Seconds
+                <span></span>Seconds
             </li>
         </ul>
         <button id="countdown-button">Reset</button>
@@ -50,9 +50,7 @@
         <h1 class="complete-title">
             Countdown Complete
         </h1>
-        <h1 class="complete-info">
-            Countdown Finished on 05-05-2020
-        </h1>
+        <h1 id="complete-info"></h1>
         <button id="complete-button">New Countdown</button>
     </div>
     </div>
